[package]
name = "kmeans-kpp-emd-triangle-inequality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
itertools = "0.12.1"
log = "0.4.21"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rayon = "1.10.0"
rmp-serde = "1.2.0"
serde = { version = "1.0.198", features = ["derive"] }
